[MTM-34361]: Use G1 Garbage Collector in microservices